<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskSchedular</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="previous_month">&lt;&lt;</string>
    <string name="next_month">&gt;&gt;</string>
    <string name="year_month">xxxx年xx月</string>

    <string name="title_sun">SUN</string>
    <string name="title_mon">MON</string>
    <string name="title_tue">TUE</string>
    <string name="title_wed">WED</string>
    <string name="title_thu">THU</string>
    <string name="title_fri">FRI</string>
    <string name="title_sat">SAT</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
