<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    -->

   <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="7"
                android:text="@string/year_month"
                android:id="@+id/txtYM"
                android:gravity="left"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/weekIndex">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_sun"
                android:id="@+id/txtSun"
                android:textColor="@color/sun"
                android:gravity="center"
                android:layout_weight="1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_mon"
                android:id="@+id/txtMon"
                android:gravity="center"
                android:layout_weight="1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_tue"
                android:id="@+id/txtTue"
                android:gravity="center"
                android:layout_weight="1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_wed"
                android:id="@+id/txtWed"
                android:gravity="center"
                android:layout_weight="1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_thu"
                android:id="@+id/txtThu"
                android:gravity="center"
                android:layout_weight="1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_fri"
                android:id="@+id/txtFri"
                android:gravity="center"
                android:layout_weight="1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_sat"
                android:id="@+id/txtSat"
                android:textColor="@color/sat"
                android:gravity="center"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day00"
                android:id="@+id/txtDay00"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day01"
                android:id="@+id/txtDay01"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day02"
                android:id="@+id/txtDay02"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day03"
                android:id="@+id/txtDay03"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day04"
                android:id="@+id/txtDay04"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day05"
                android:id="@+id/txtDay05"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day06"
                android:id="@+id/txtDay06"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day10"
                android:id="@+id/txtDay10"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day11"
                android:id="@+id/txtDay11"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day12"
                android:id="@+id/txtDay12"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day13"
                android:id="@+id/txtDay13"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day14"
                android:id="@+id/txtDay14"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day15"
                android:id="@+id/txtDay15"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day16"
                android:id="@+id/txtDay16"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day20"
                android:id="@+id/txtDay20"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day21"
                android:id="@+id/txtDay21"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day22"
                android:id="@+id/txtDay22"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day23"
                android:id="@+id/txtDay23"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day24"
                android:id="@+id/txtDay24"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day25"
                android:id="@+id/txtDay25"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day26"
                android:id="@+id/txtDay26"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day30"
                android:id="@+id/txtDay30"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day31"
                android:id="@+id/txtDay31"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day32"
                android:id="@+id/txtDay32"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day33"
                android:id="@+id/txtDay33"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day34"
                android:id="@+id/txtDay34"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day35"
                android:id="@+id/txtDay35"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day36"
                android:id="@+id/txtDay36"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day40"
                android:id="@+id/txtDay40"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day41"
                android:id="@+id/txtDay41"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day42"
                android:id="@+id/txtDay42"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Day43"
                android:id="@+id/txtDay43"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day44"
                android:id="@+id/txtDay44"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Day45"
                android:id="@+id/txtDay45"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day46"
                android:id="@+id/txtDay46"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day50"
                android:id="@+id/txtDay50"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day51"
                android:id="@+id/txtDay51"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day52"
                android:id="@+id/txtDay52"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day53"
                android:id="@+id/txtDay53"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day54"
                android:id="@+id/txtDay54"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day55"
                android:id="@+id/txtDay55"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Day56"
                android:id="@+id/txtDay56"
                android:layout_weight="1" />
        </TableRow>

       <TableRow
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="5">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_span="7"
               android:text="。。。。。"
               android:id="@+id/txtInfo"
               android:gravity="center"
               android:layout_weight="5" />
       </TableRow>

    </TableLayout>






</RelativeLayout>
